--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-      background-image: url("fond.jpg");
+      background-image: url("./img/fond.jpg");
       background-size:100% 499%;
       background-repeat: no-repeat;
       background-position-y: -21%;
